Move Geany's core into a library (libgeany)
This will allow plugins to link against the core when accessing API
functions, now that the macro/struct/funcptr stuff is gone.

Also convert the helper libraries into Libtool helper libraries as
linking a shared library against static libraries is (apparently) not
portable.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -16,8 +16,8 @@ src/geanyentryaction.c
 src/highlighting.c
 src/keybindings.c
 src/keyfile.c
+src/libmain.c
 src/log.c
-src/main.c
 src/msgwindow.c
 src/navqueue.c
 src/notebook.c
