Improve Autotools build system for libgeany
Checks if the compiler supports -fvisibility and the linker supports
-dynamic-list arguments and use them instead of hardcoding. The new
geany-lib.m4 also accomodates future use of Libtool versioning.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -102,11 +102,11 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/scintilla/include \
 	-I$(top_srcdir)/tagmanager/src \
-	@GTK_CFLAGS@ @GTHREAD_CFLAGS@ $(MAC_INTEGRATION_CFLAGS)
+	@GTK_CFLAGS@ @GTHREAD_CFLAGS@ $(MAC_INTEGRATION_CFLAGS) @LIBGEANY_CFLAGS@
 
 # tell automake we have a C++ file so it uses the C++ linker we need for Scintilla
 nodist_EXTRA_geany_SOURCES = dummy.cxx
-
+nodist_EXTRA_libgeany_la_SOURCES = dummy1.cxx
 
 if MINGW
 # build Geany for Windows on non-Windows systems (cross-compile)
@@ -121,8 +121,10 @@ libgeany_la_LIBADD = \
 	@GTK_LIBS@ \
 	@GTHREAD_LIBS@ \
 	$(INTLLIBS) \
-	-lole32 -luuid -lwsock32 -lcomdlg32
+	@LIBGEANY_LIBS@ \
+	-lole32 -lwsock32 -lcomdlg32
 
+libgeany_la_LDFLAGS = -Wl,-luuid $(AM_LDFLAGS)
 geany_LDADD += geany_private.res  -lcomdlg32
 
 AM_CFLAGS = -DGEANY_DATADIR=\"data\" \
@@ -132,10 +134,9 @@ AM_CFLAGS = -DGEANY_DATADIR=\"data\" \
 			-DGEANY_PREFIX=\"\" \
 			-DGEANY_PRIVATE \
 			-DGTK \
-			-DG_LOG_DOMAIN=\""Geany"\" \
-			-fvisibility=hidden
+			-DG_LOG_DOMAIN=\""Geany"\"
 
-libgeany_la_LDFLAGS =	-mwindows -mms-bitfields -no-undefined
+libgeany_la_LDFLAGS +=	-mwindows -mms-bitfields -no-undefined
 
 WINDRES = $(host_alias)-windres
 
@@ -158,9 +159,8 @@ libgeany_la_LIBADD = \
 	@GTK_LIBS@ \
 	@GTHREAD_LIBS@ \
 	$(MAC_INTEGRATION_LIBS) \
-	$(INTLLIBS)
-
-libgeany_la_LDFLAGS = -Wl,--dynamic-list="$(srcdir)/dynamicsymbols.list"
+	$(INTLLIBS) \
+	@LIBGEANY_LIBS@
 
 AM_CFLAGS = -DGEANY_DATADIR=\""$(datadir)"\" \
 			-DGEANY_DOCDIR=\""$(docdir)"\" \
@@ -169,8 +169,7 @@ AM_CFLAGS = -DGEANY_DATADIR=\""$(datadir)"\" \
 			-DGEANY_PREFIX=\""$(prefix)"\" \
 			-DGEANY_PRIVATE \
 			-DGTK \
-			-DG_LOG_DOMAIN=\""Geany"\" \
-			-fvisibility=hidden
+			-DG_LOG_DOMAIN=\""Geany"\"
 
 clean-local:
 
