--- a/tagmanager/src/Makefile.am
+++ b/tagmanager/src/Makefile.am
@@ -6,7 +6,7 @@ AM_CPPFLAGS = \
 	-DG_LOG_DOMAIN=\"Tagmanager\"
 AM_CFLAGS = \
 	$(GTK_CFLAGS) \
-	-fvisibility=hidden
+	@LIBGEANY_CFLAGS@
 
 EXTRA_DIST = \
 	makefile.win32
@@ -30,3 +30,5 @@ libtagmanager_la_SOURCES =\
 	tm_tag.c \
 	tm_workspace.h \
 	tm_workspace.c
+
+libtagmanager_la_LDFLAGS = @LIBGEANY_LIBS@
