Improve Autotools build system for libgeany
Checks if the compiler supports -fvisibility and the linker supports
-dynamic-list arguments and use them instead of hardcoding. The new
geany-lib.m4 also accomodates future use of Libtool versioning.

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -33,8 +33,7 @@ MINGW_CFLAGS = \
 			-I$(top_srcdir)/tagmanager/src \
 			-I$(top_srcdir)/scintilla/include \
 			$(GTK_CFLAGS) \
-			$(PLUGIN_CFLAGS) \
-			-fvisibility=default
+			$(PLUGIN_CFLAGS)
 
 .PHONY: all clean
 
