Replace dynamic exports with codegen for GtkBuilder callbacks
This prevents having to export those callbacks and put them in the
global namespace. Also, use inline shell script in Makefile.am instead
of a Python script which should be more portable (by default) and gets
rid of the helper script.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,7 +11,7 @@ EXTRA_DIST = \
 	pluginprivate.h \
 	projectprivate.h \
 	makefile.win32 \
-	$(top_srcdir)/src/dynamicsymbols.list
+	$(srcdir)/signalconn.c.in
 
 bin_PROGRAMS = geany
 lib_LTLIBRARIES = libgeany.la
@@ -173,10 +173,20 @@ AM_CFLAGS = -DGEANY_DATADIR=\""$(datadir)"\" \
 
 clean-local:
 
-# Helper rule to rebuild the dynamicsymbols.list file when handlers are
-# added to data/geany.glade. Run `make dynamic-symbols' from the src builddir.
-$(top_srcdir)/src/dynamicsymbols.list: $(top_srcdir)/data/geany.glade
-	-python $(top_srcdir)/scripts/dynamicsymbols.py -o $@ $(top_srcdir)/data/geany.glade
-dynamic-symbols: $(top_srcdir)/src/dynamicsymbols.list
-
 endif
+
+callbacks.c: signalconn.c
+
+glade_file=$(top_srcdir)/data/geany.glade
+template_file=$(srcdir)/signalconn.c.in
+
+signalconn.c: $(glade_file) $(template_file)
+	$(AM_V_GEN)( \
+		echo '/* This file is auto-generated, do not edit. */' && \
+		$(SED) -n '/@callback_map@/q;p' "$(template_file)" && \
+		$(SED) -n 's/^.*handler="\([^"]\+\)".*$$/\tg_hash_table_insert(hash, "\1", G_CALLBACK(\1));/p' "$(glade_file)" \
+			| $(SORT) | $(UNIQ) && \
+		$(SED) -n '/@callback_map@/{:l;n;p;b l}' "$(template_file)" \
+	) > $@ || { $(RM) $@ && exit 1; }
+
+CLEANFILES = signalconn.c
