--- a/tagmanager/src/makefile.win32
+++ b/tagmanager/src/makefile.win32
@@ -29,7 +29,9 @@ GTK_INCLUDES= \
 
 INCLUDEDIRS=-I ../ctags -I ../ -I . $(GTK_INCLUDES)
 
-CBASEFLAGS=-Wall -pipe -mms-bitfields -DGEANY_PRIVATE -DPACKAGE=\"geany\" -Wno-missing-braces -Wno-char-subscripts $(INCLUDEDIRS)
+CBASEFLAGS=-Wall -pipe -mms-bitfields -DGEANY_PRIVATE -DPACKAGE=\"geany\" -Wno-missing-braces -Wno-char-subscripts $(INCLUDEDIRS) \
+	-DGEANY_EXPORT_SYMBOL="__declspec(dllexport)" \
+	-DGEANY_API_SYMBOL=GEANY_EXPORT_SYMBOL
 ifdef DEBUG
 CFLAGS= -O0 -g $(CBASEFLAGS)
 else
