Autotools: MinGW: Fix building .res file in VPATH builds
From a patch by Valentin Kunz, thanks!
Part of https://sourceforge.net/p/geany/patches/17/

--- a/geany_private.rc
+++ b/geany_private.rc
@@ -5,7 +5,7 @@
 #define VER_FILEVERSION_STR         "1.25"
 #define APP_MANIFEST                1
 
-A ICON MOVEABLE PURE LOADONCALL DISCARDABLE "../icons/geany.ico"
+A ICON MOVEABLE PURE LOADONCALL DISCARDABLE "icons/geany.ico"
 
 VS_VERSION_INFO		VERSIONINFO
 FILEVERSION			VER_FILEVERSION
