Autotools: Improve the rule to compile Windows resource file

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -124,8 +124,8 @@ geany_LDFLAGS =	-mwindows -mms-bitfields
 
 WINDRES = $(host_alias)-windres
 
-geany_private.res:
-	$(WINDRES) -i $(top_srcdir)/geany_private.rc --input-format=rc -o geany_private.res -O coff;
+geany_private.res: $(top_srcdir)/geany_private.rc
+	$(WINDRES) -i $(top_srcdir)/geany_private.rc --input-format=rc -o $@ -O coff
 
 clean-local:
 	rm -f geany_private.res
