Add the go ctags parser
Make go one of the builtin filetypes, add the parser and update the related
source and config files. While there, remove Rust from [Groups] in
filetype_extensions.conf because it's already a builtin filetype as well.

The parser itself is stolen from the fishman/ctags repo.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -33,7 +33,7 @@ filetypes = \
 	filetypes.freebasic \
 	filetypes.Genie.conf \
 	filetypes.glsl \
-	filetypes.Go.conf \
+	filetypes.go \
 	filetypes.Graphviz.conf \
 	filetypes.haskell \
 	filetypes.haxe \
