--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -69,7 +69,7 @@ None=*;
 
 # Note: restarting is required after editing groups
 [Groups]
-Programming=Clojure;CUDA;Cython;Genie;Go;Rust;Scala;
+Programming=Clojure;CUDA;Cython;Genie;Scala;
 Script=Graphviz;
 Markup=
 Misc=
