--- a/tagmanager/ctags/makefile.win32
+++ b/tagmanager/ctags/makefile.win32
@@ -49,7 +49,7 @@ actionscript.o nsis.o objc.o \
 haskell.o haxe.o html.o python.o lregex.o asciidoc.o rest.o sh.o ctags.o entry.o get.o keyword.o nestlevel.o \
 options.o \
 parse.o basic.o read.o sort.o strlist.o latex.o markdown.o matlab.o docbook.o tcl.o ruby.o rust.o asm.o sql.o txt2tags.o css.o \
-vstring.o r.o
+vstring.o r.o go.o
 	$(AR) rc $@ $^
 	$(RANLIB) $@
 
