--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -242,6 +242,7 @@ test_sources = \
 	strings.rb						\
 	structure.f						\
 	tabindent.py					\
+	test.go							\
 	test.py							\
 	test.vhd						\
 	test_input.rs					\
