Add preliminary support for Dartlang syntax highlighting

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -20,6 +20,7 @@ Conf=*.conf;*.ini;config;*rc;*.cfg;*.desktop;*.properties;
 CSS=*.css;
 Cython=*.pyx;*.pxd;*.pxi;
 D=*.d;*.di;
+Dart=*dart;
 Diff=*.diff;*.patch;*.rej;
 Docbook=*.docbook;
 Erlang=*.erl;*.hrl;
@@ -69,7 +70,7 @@ None=*;
 
 # Note: restarting is required after editing groups
 [Groups]
-Programming=Clojure;CUDA;Cython;Genie;Go;Rust;Scala;
+Programming=Clojure;CUDA;Cython;Dart;Genie;Go;Rust;Scala;
 Script=Graphviz;
 Markup=
 Misc=
