--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -20,7 +20,7 @@ Conf=*.conf;*.ini;config;*rc;*.cfg;*.desktop;*.properties;
 CSS=*.css;
 Cython=*.pyx;*.pxd;*.pxi;
 D=*.d;*.di;
-Dart=*dart;
+Dart=*.dart;
 Diff=*.diff;*.patch;*.rej;
 Docbook=*.docbook;
 Erlang=*.erl;*.hrl;
