--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -159,6 +159,7 @@ test_sources = \
 	intro.tex						\
 	invalid_name.f90				\
 	java_enum.java					\
+	js-class-related-unterminated.js	\
 	js-scope.js						\
 	js-unknown-construct-nesting.js	\
 	jsFunc_tutorial.js				\
