javascript: Fix scope inside nested blocks (if/else/while/for/etc.)

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -161,6 +161,7 @@ test_sources = \
 	java_enum.java					\
 	js-class-related-unterminated.js	\
 	js-scope.js						\
+	js-sub-block-scope.js			\
 	js-unknown-construct-nesting.js	\
 	jsFunc_tutorial.js				\
 	keyword_abstract.cs				\
