javascript: Add support for the `const` keyword
`const` is not yet part of the current ECMAScript standard but is
part of the ECMAScript 6 draft and is supported by popular engines
including Mozilla and WebKit, and people already use it.

See https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/const

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -160,6 +160,7 @@ test_sources = \
 	invalid_name.f90				\
 	java_enum.java					\
 	js-class-related-unterminated.js	\
+	js-const.js						\
 	js-implicit-semicolons.js		\
 	js-scope.js						\
 	js-signature.js					\
