javascript: Add support for the `let` keyword
`let` is not yet part of the current ECMAScript standard but is part of
the ECMAScript 6 draft and is supported by Mozilla, and people already
use it in some contexts.

Also, the current ECMAScript standard marks `let` as a "considered
reserved word" (7.6.1.2), so it is already a reserved keyword in strict
mode.

See https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/let

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -162,6 +162,7 @@ test_sources = \
 	js-class-related-unterminated.js	\
 	js-const.js						\
 	js-implicit-semicolons.js		\
+	js-let.js						\
 	js-scope.js						\
 	js-signature.js					\
 	js-sub-block-scope.js			\
