--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -159,12 +159,14 @@ test_sources = \
 	intro.tex						\
 	invalid_name.f90				\
 	java_enum.java					\
+	js-broken-strings.js			\
 	js-class-related-unterminated.js	\
 	js-const.js						\
 	js-implicit-semicolons.js		\
 	js-let.js						\
 	js-scope.js						\
 	js-signature.js					\
+	js-string-continuation.js		\
 	js-sub-block-scope.js			\
 	js-unknown-construct-nesting.js	\
 	jsFunc_tutorial.js				\
