Parse D enum base type & refactor
Merge and extend fishman/ctags enum inheritance parsing for C++, D,
and add simple.d.t/input.d test.

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -243,6 +243,7 @@ test_sources = \
 	signature.cpp					\
 	simple.bas						\
 	simple.cbl						\
+	simple.d						\
 	simple.html						\
 	simple.js						\
 	simple.ksh						\
