Add JSON custom filetype
Closes #384.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -41,6 +41,7 @@ filetypes = \
 	filetypes.html \
 	filetypes.java \
 	filetypes.javascript \
+	filetypes.JSON.conf \
 	filetypes.latex \
 	filetypes.lisp \
 	filetypes.lua \
