--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -38,6 +38,7 @@ Haxe=*.hx;
 HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;*.tpl;
 Java=*.java;*.jsp;
 Javascript=*.js;
+JSON=*.json;
 LaTeX=*.tex;*.sty;*.idx;*.ltx;*.latex;*.aux;*.bib;
 Lisp=*.lisp;
 Lua=*.lua;
@@ -73,5 +74,5 @@ None=*;
 Programming=Clojure;CUDA;Cython;Genie;Scala;
 Script=Graphviz;
 Markup=
-Misc=
+Misc=JSON;
 None=
