add some snippets

--- a/data/snippets.conf
+++ b/data/snippets.conf
@@ -19,6 +19,13 @@
 
 # Default is used for all filetypes and keys can be overwritten by [filetype] sections
 [Default]
+if=if (%cursor%)%block_cursor%
+else=else%block_cursor%
+for=for (i = 0; i < %cursor%; i++)%block_cursor%
+while=while (%cursor%)%block_cursor%
+do=do\n{\n\t%cursor%\n} while (%cursor%)\n%cursor%
+switch=switch (%cursor%)%brace_open%case %cursor%:\n\t\t%cursor%\n\t\tbreak;\n\tdefault:\n\t\t%cursor%\n%brace_close%%cursor%
+try=try%block%\ncatch (%cursor%)%block_cursor%
 
 # special keys to be used in other snippets, cannot be used "standalone"
 # can be used by %key%, e.g. %brace_open%
@@ -46,6 +53,7 @@ do=do\n{\n\t%cursor%\n} while (%cursor%)\n%cursor%
 switch=switch (%cursor%)%brace_open%case %cursor%:\n\t\t%cursor%\n\t\tbreak;\n\tdefault:\n\t\t%cursor%\n%brace_close%%cursor%
 
 [C++]
+main=\n\nint main(int argc, char* argv[]) {\n\t%cursor%\n\treturn 0;\n}
 if=if (%cursor%)%block_cursor%
 else=else%block_cursor%
 for=for (int i = 0; i < %cursor%; i++)%brace_open%\n%brace_close%
@@ -58,6 +66,11 @@ try=try%block%\ncatch (%cursor%)%block_cursor%
 if=if (%cursor%)%block_cursor%
 else=else%block_cursor%
 for=for (int i = 0; i < %cursor%; i++)%brace_open%\n%brace_close%
+syso=System.out.println("%cursor%");
+Syso=System.out.println("%cursor%");
+main=package %cursor%;\n\npublic class Main {\n\tpublic static void main(String[] args) {\n\t\t%cursor%\n%brace_close1%%brace_close%
+class=public class %cursor% {\n\t%cursor%\n}
+junit=import org.junit.*;\n \npublic class Test%cursor% {\n\t//~ @BeforeClass\n\t//~ public static void setUpClass() throws Exception {\n\t\t//~ \n\t//~ }\n\n\t//~ @Before\n\t//~ public void setUp() throws Exception {\n\t\t//~ \n\t//~ }\n\n\t@Test\n\tpublic void test() {\n\t\t\n\t}\n\n\t//~ @After\n\t//~ public void tearDown() throws Exception {\n\t\t//~ \n\t//~ }\n\t\n\t//~ @AfterClass\n\t//~ public static void tearDownClass() throws Exception {\n\t\t//~ \n\t//~ }\n\t\n}
 while=while (%cursor%)%block_cursor%
 do=do\n{\n\t%cursor%\n} while (%cursor%)\n%cursor%
 switch=switch (%cursor%)%brace_open%case %cursor%:\n\t\t%cursor%\n\t\tbreak;\n\tdefault:\n\t\t%cursor%\n%brace_close%%cursor%
@@ -127,6 +140,9 @@ monitor=monitor%block_cursor%handle%block%
 
 [HTML]
 table=<table>\n\t<tr>\n\t\t<td>%cursor%</td>\n\t</tr>\n</table>
+
+[LaTeX]
+base=\documentclass[%cursor%]{article}\n\usepackage[utf8]{inputenc}\n\usepackage[T1]{fontenc}\n\usepackage{lmodern}\n\usepackage[a4paper]{geometry}\n\usepackage{babel}\n\begin{document}\n%cursor%\n\end{document}
 
 [Erlang]
 case=case %cursor% of\n\t%cursor% -> %cursor%\nend
