autotools: Install to $prefix/data on win32
setup_paths() sets app->datadir to $prefix/win32. With mingw-via-autotools,
it installed data to $prefix/share/geany (like on Linux). With this change
data is installed to $prefix/data ($datarootdir is not changed).

This fixes geany startup after make install with autotools.

Linux:
pkgdatadir = ${datarootdir}/geany
GEANY_DATA_DIR = /path/to/prefix/share/geany

Win32:
pkgdatadir = ${prefix}/data
GEANY_DATA_DIR = /path/to/prefix/data

--- a/configure.ac
+++ b/configure.ac
@@ -110,8 +110,12 @@ GEANY_CHECK_THE_FORCE dnl hehe
 # i18n
 GEANY_I18N
 
-GEANY_DATA_DIR=`eval echo ${datarootdir}/geany`
-AC_SUBST([GEANY_DATA_DIR])
+# double eval since datarootdir is usually defined as ${prefix}/share
+AM_COND_IF([MINGW],
+  [pkgdatadir='${prefix}/data'],
+  [pkgdatadir='${datarootdir}/geany'])
+AC_SUBST([GEANY_DATA_DIR], [$(eval echo $(eval echo $pkgdatadir))])
+AC_SUBST([pkgdatadir])
 
 # Documentation tools
 GEANY_CHECK_DOCUTILS
