--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -4,7 +4,11 @@ EXTRA_DIST = \
 	makefile.win32 \
 	genapi.py
 
+if MINGW
+plugindir = $(libdir)
+else
 plugindir = $(libdir)/geany
+endif
 
 plugins_includedir = $(includedir)/geany
 plugins_include_HEADERS = \
