--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -268,6 +268,7 @@ test_sources = \
 	strings.rb						\
 	structure.f						\
 	tabindent.py					\
+	test.erl						\
 	test.go							\
 	test.py							\
 	test.vhd						\
