autotools: Fix make dist after Scintilla makefile.win32 move
8ebac60901c239a7dc36461a077139595bed12b8 moved the makefile.win32,
so we need to use the new location.

--- a/scintilla/Makefile.am
+++ b/scintilla/Makefile.am
@@ -148,4 +148,4 @@ marshallers: gtk/scintilla-marshal.list
 	glib-genmarshal --prefix scintilla_marshal gtk/scintilla-marshal.list --body > gtk/scintilla-marshal.c
 
 EXTRA_DIST=gtk/scintilla-marshal.list License.txt README version.txt \
-	makefile.win32
+	gtk/makefile.win32
